--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="IIEST is not just an engineering instution , it's an emotion. The environment here has the magic to transform all your anxiety into happiness. It not only gives us the degree oriented education, but gives us the exposure to explore, and to be a human BEing."
     />
     <meta name="keywords" content="Indian Institute of Engineering Science and Technology Shibpur, All you need to know about IIESTS, Shibpur,B.E Collage, Bengal Engineering and Science University, How is IIEST Shibpur , Is IIEST Shibpur is good, How is the Campus life of IIEST Shibpur ,What are the Fests of IIEST SHIBPUR, Know IIESTS, books needed for  first year examination of IIEST Shibpur , How many canteens are there in IIEST Shibpur, Know IIEST app download">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/WhatsApp Image 2020-07-20 at 00.14.14.jpegg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
