--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon (2).ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#8ee4af" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="IIEST is not just an engineering instution , it's an emotion. The environment here has the magic to transform all your anxiety into happiness. It not only gives us the degree oriented education, but gives us the exposure to explore, and to be a human BEing."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="Indian Institute of Engineering Science and Technology Shibpur, All you need to know about IIESTS, Shibpur,B.E Collage, Bengal Engineering and Science University, How is IIEST Shibpur , Is IIEST Shibpur is good, How is the Campus life of IIEST Shibpur ,What are the Fests of IIEST SHIBPUR, Know IIESTS, books needed for  first year examination of IIEST Shibpur , How many canteens are there in IIEST Shibpur, Know IIEST app download">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/WhatsApp Image 2020-07-20 at 00.14.14.jpegg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/1e2c9bf03f.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>All u need to know about IIESTS| Know-IIESTS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
