--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>All u need to know about IIESTS| Know-IIESTS</title>
+    <!-- Hotjar Tracking Code for https://knowiiest.netlify.app/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2797382,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
